# graph_approach_er

./: .gitignore  README.md  setup.cfg
experiment_results_paper/: amazon_google_bert_-1834250111383206340_e79b50eb1c6e922d5b2bf686972145c1.txt  markt_pilot_full_bert_8531492401027304340_9fe12cf880dd8f17c916f3070d2107bb.txt  markt_pilot_full_ditto_-6914686329072990047_106bb11390805e8892f6069c5c0953b7.txt  markt_pilot_l_bert_7287936956793162156_2e63ce691d39dbf19c42ae77e4d25cc9.txt  markt_pilot_s_bert_-1271953470722496252_0e48aa202ab7ff402a5aaecd5e312a54.txt  walmart_amazon_bert_969357364345053723_4fd9938fb178568eb2eb6739b889d7ec.txt  wdc_large_bert_7622859886005758397_ccf7b6a9e9bc9009e98386e0fc91f166.txt  wdc_small_bert_5311632504031477293_e543f59dfb6dd60897a1ee39c2631369.txt  wdc_small_ditto_-3508501842567524917_a7bde996fd4c9a6c1e24c35a33334a87.txt
graph_approach_for_er/: run_all_experiments.py  run_experiment.py
graph_approach_for_er/augmenter/: offline_augmentation.py  operator_easy_data_augmentation.py  operator_invda.py
graph_approach_for_er/dataloader/: magellan_bert_loader.py  magellan_non_bert_loader.py  mp_bert_loader.py  mp_non_bert_loader.py  mrsp_loader.py  wdc_bert_loader.py  wdc_non_bert_loader.py
graph_approach_for_er/experiments/: amazon_google_bert_-1265672040974221587.yml  amazon_google_bert_-2164534922765797650.yml  amazon_google_bert_-9085900056990685513.yml  amazon_google_bert_1621615291904993969.yml  amazon_google_bert_3045171076322767034.yml  amazon_google_bert_3098865864250829561.yml  (+309 more)
graph_aug_for_er/: run_experiment.py
(+345 files in other folders)
