[metadata]
name = graph_approach_for_er
version = file: version.txt
author = T. Rettenmeier
long_description = file: README.md
long_description_content_type = text/markdown

classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    luigi
    matplotlib
    pandas
    pyarrow
    joblib
    transformers
    nltk
    scikit-learn
    spacy
    tensorboardX
    vastai
    sentencepiece
    nlpaug
    networkx
include_package_data = True
